# AgroStack

./: .env-example  .env.example  .gitignore  README.md  all_kottayam_records.json  next.config.ts  package-lock.json  package.json  proxy.ts
AiPriceEngine/: .gitignore  .openmeteo_cache.sqlite  README.md  data_manager.py  engine.py  federatedlearning.py  main.py  pyproject.toml  requirements.txt  sarvamXsupa.py  simulation_engine.py
app/: globals.css  layout.tsx  page.tsx
app/api/facebook/callback/: route.ts
app/api/facebook/generate/: route.ts
app/api/stts/: route.ts
app/api/upload/: route.ts
app/buyer/dashboard/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/farmer/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
app/register/: page.tsx
components/: AgroStackLogo.tsx  GoogleTranslate.tsx  LanguageSwitcher.tsx  MandiMap.tsx  MarketMap.tsx  MarketRouterV2.tsx  Navbar.tsx
components/chat/: MessagesPage.tsx
components/email/: orderMail.tsx
components/ui/: card.tsx  sheet.tsx
db/: index.ts  relations.ts  schema.ts
drizzle/: 0001_loud_goliath.sql  relations.ts  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
inngest/: client.ts  functions.ts
lib/: auth.ts  data.ts  generate-audio.ts  inv-ai.ts  mandi.ts  media-type.ts
platform/facebook/: core.ts  graphapi.ts
scripts/: manual-migration.ts
trpc/routers/: _app.ts  facebook.ts  fed.ts  inventory.ts  listings.ts  messaging.ts  notifications.ts  order.ts  products.ts  user.ts
(+25 files in other folders)
