[project]
name = "aipriceengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "cryptography>=41.0.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "prophet>=1.1.5",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.14.0",
    "uvicorn>=0.24.0",
]
